fix portico overflow style

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -495,7 +495,7 @@ input.text-error {
 
 .portico-container {
     position: relative;
-
+    overflow-x: hidden;
     .if-zulip-electron {
         display: none;
     }
